Add dose/exposure rates as part of Measurement; improve testing. Added the #Measurement::dose_rate_ and #Measurement::exposure_rate_ fields, and implemented reading in to these fields for the detector formats I found this information in.  Note that now the analysis result will not hold dose rate info if the dose rate is provided alongside spectrum/neutron data, and only if its provided in the analysis field. Added CMake variable 'SpecUtils_ENABLE_EQUALITY_CHECKS' which allows compiling in the 'equal_enough' test functions, even if  the CMake `PERFORM_DEVELOPER_CHECKS` options is off; this is to allow better timing info, and moving towards including the test in Release codes, so the released executable of cambio-cl can directly do the regression test, rather than just the same code; work in progress, not sure when will be done. Modified `equal_enough` functions to now list all the errors encountered, instead of just the first error encountered.

--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -37,7 +37,7 @@
 #cmakedefine01 SpecUtils_JAVA_SWIG
 
 #cmakedefine01 SpecUtils_USE_SIMD
-
+#cmakedefine01 SpecUtils_ENABLE_EQUALITY_CHECKS
 
 #if( defined(_WIN32) && defined(_MSC_VER) )
 #include <stdio.h>
