Minor fixes to get the regression tests passing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,11 +226,21 @@ set_target_properties( SpecUtils PROPERTIES PREFIX "lib" OUTPUT_NAME "SpecUtils"
 #target_compile_features(SpecUtils PUBLIC cxx_std_11)
 #set_target_properties(SpecUtils PROPERTIES CXX_EXTENSIONS OFF)
 
-set_target_properties( SpecUtils PROPERTIES
-  CXX_STANDARD 11
-  CXX_STANDARD_REQUIRED YES
-  CXX_EXTENSIONS NO
-)
+if( MSVC AND (MSVC_VERSION GREATER_EQUAL 1920) )
+  # MSVC >=2019 supports floating point from_chars, while Xcode 14 still doesnt (havent checked Android Studio)
+  message( "Setting C++ std to 17 for use of charconv" )
+  set_target_properties( SpecUtils PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+  )
+else()
+  set_target_properties( SpecUtils PROPERTIES
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+  )
+endif()
 
 
 if( SpecUtils_USE_WT_THREADPOOL )
