--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -39,6 +39,8 @@
 #cmakedefine01 SpecUtils_USE_SIMD
 #cmakedefine01 SpecUtils_ENABLE_EQUALITY_CHECKS
 
+#cmakedefine01 SpecUtils_USE_FROM_CHARS
+
 #if( defined(_WIN32) && defined(_MSC_VER) )
 #include <stdio.h>
 #include <stdlib.h>
@@ -53,8 +55,8 @@
 #endif
 
 #if( __cplusplus > 199711L || defined(ANDROID) || defined(__APPLE__) )
-#define IsInf(x) std::isinf(x)
-#define IsNan(x) std::isnan(x)
+#define IsInf(x) (std::isinf)(x)
+#define IsNan(x) (std::isnan)(x)
 #else
 #define IsInf(x) isinf(x)
 #define IsNan(x) isnan(x)
