Add parsing of Bridgeport Instruments json.
Implemented a very minimal parsing of Bridgeport Instruments eMorpho JSON spectrum files.
Ended up doing some simple string searching to extract info from the JSON, rather than full JSON parsing (although that was also implemented, and is selectable at runtime by editing SpecFile_json.cpp), to minimize code bloat and keep things minimal.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ set( sources
      src/SpecFile_multiact.cpp
      src/SpecFile_uraider.cpp
      src/SpecFile_xml_other.cpp
+     src/SpecFile_json.cpp
      src/SpecUtilsAsync.cpp
      src/SerialToDetectorModel.cpp
      src/EnergyCalibration.cpp
