complete the rename from SpectrumDataStructs -> SpecUtils / SpecFile.
put java files in a package so they can be used by a java file that is in a package.

readme:  separate library (SpecUtils was separated out from InterSpec)

includes requried by code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,8 @@ if( SpecUtils_JAVA_SWIG )
   INCLUDE_DIRECTORIES( ${JAVA_INCLUDE_PATH} )
   INCLUDE_DIRECTORIES( ${JAVA_INCLUDE_PATH}/linux )
   INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/bindings/swig )
-  SET( CMAKE_SWIG_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR} -I${CMAKE_CURRENT_BINARY_DIR} -DSpecUtils_JAVA_SWIG=1 )
+  SET( CMAKE_SWIG_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR} -I${CMAKE_CURRENT_BINARY_DIR} -DSpecUtils_JAVA_SWIG=1 -package gov.sandia.specutils )
+  SET( CMAKE_SWIG_OUTDIR gov/sandia/specutils )
   SET_SOURCE_FILES_PROPERTIES(bindings/swig/SpecUtils.i PROPERTIES CPLUSPLUS ON)
   SET_SOURCE_FILES_PROPERTIES(bindings/swig/SpecUtils.i PROPERTIES SWIG_FLAGS "")
   SWIG_ADD_MODULE( SpecUtilsJni java bindings/swig/SpecUtils.i )
