Made so date/time parsing always uses the C locale
Date/time parsing would fail on some Linuxes for strings that had month or day names (e.x. "Dec", or "June"), or AM/PM.
Changed it so the English/US "C" locale is now always used for date/time parsing, so parsing results wont depend on currently set locale.
Also added missing datetimes.txt files for unit testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,7 +269,11 @@ if( SpecUtils_USE_WT_THREADPOOL )
       target_include_directories( SpecUtils PUBLIC ${Wt_INCLUDE_DIR} )
     endif( NOT Wt_INCLUDE_DIR OR NOT Wt_FOUND )
   endif( DEFINED wt_SOURCE_DIR )
+elseif( NOT SpecUtils_USING_NO_THREADING )
+  find_package(Threads REQUIRED)
+  target_link_libraries( SpecUtils PUBLIC Threads::Threads )
 endif( SpecUtils_USE_WT_THREADPOOL )
+
 
 
 if( SpecUtils_ENABLE_URI_SPECTRA )
