cmake tweaks Also make sure test_rebin_by_lower_energy.cpp return zero exit code

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -69,19 +69,19 @@ add_test( TestSafeGetLine ${EXECUTABLE_OUTPUT_PATH}/test_safe_get_line.exe --log
 add_executable( test_time_from_string.exe test_time_from_string.cpp )
 target_link_libraries( test_time_from_string.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_time_from_string.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestTimeFromString ${EXECUTABLE_OUTPUT_PATH}/test_time_from_string.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestTimeFromString COMMAND test_time_from_string.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes WORKING_DIRECTORY ${testdir}/test_data)
 
 
 add_executable( test_string_functions.exe test_string_functions.cpp )
 target_link_libraries( test_string_functions.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_string_functions.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestUtilityStringFunctions ${EXECUTABLE_OUTPUT_PATH}/test_string_functions.exe "--indir=${testdir}" --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test( NAME TestUtilityStringFunctions COMMAND test_string_functions.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes WORKING_DIRECTORY ${testdir}/test_data)
 
 
 add_executable( test_split_to_floats_and_ints.exe test_split_to_floats_and_ints.cpp )
 target_link_libraries( test_split_to_floats_and_ints.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_split_to_floats_and_ints.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestSplitToFloats ${EXECUTABLE_OUTPUT_PATH}/test_split_to_floats_and_ints.exe "--indir=${testdir}" --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test( NAME TestSplitToFloats COMMAND test_split_to_floats_and_ints.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes  WORKING_DIRECTORY ${testdir}/test_data)
 
 
 add_executable( test_utf8_limit_str_size.exe test_utf8_limit_str_size.cpp )
@@ -109,11 +109,11 @@ add_test( testUtilityFilesystemFunctions ${EXECUTABLE_OUTPUT_PATH}/test_filesyst
 add_executable( test_rebin_by_lower_energy.exe test_rebin_by_lower_energy.cpp )
 target_link_libraries( test_rebin_by_lower_energy.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_rebin_by_lower_energy.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestRebinByLowerEnergy ${EXECUTABLE_OUTPUT_PATH}/test_rebin_by_lower_energy.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test( NAME TestRebinByLowerEnergy COMMAND test_rebin_by_lower_energy.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
 
 if( SpecUtils_ENABLE_URI_SPECTRA )
 add_executable( test_uri_spectrum.exe test_uri_spectrum.cpp )
 target_link_libraries( test_uri_spectrum.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_uri_spectrum.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestRebinByLowerEnergy ${EXECUTABLE_OUTPUT_PATH}/test_uri_spectrum.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test(test_uri_spectrum ${EXECUTABLE_OUTPUT_PATH}/test_uri_spectrum.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
 endif()
