ctest mods explicityly specify NAME, COMMAND, and WORKING_DIRECTORY.
--indir argument didn't work for me.

Haven't testeqd on native windows toolchain

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -7,6 +7,7 @@ enable_testing()
 
 option( ADD_TEST_SPEC_DIR "Base Directory containing other directories that have valid spectrum files for test opening" "" )
 set( testdir "${CMAKE_CURRENT_SOURCE_DIR}" )
+set( test_data_dir ${CMAKE_CURRENT_SOURCE_DIR}/test_data )
 
 
 # Set the CWD to the build folder, for Xcode at least
@@ -32,9 +33,9 @@ endif( NOT Boost_FOUND )
 add_executable( test_energy_calibration.exe test_energy_calibration.cpp )
 target_link_libraries( test_energy_calibration.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_energy_calibration.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestEnergyCalibration
-                 ${EXECUTABLE_OUTPUT_PATH}/test_energy_calibration.exe
-                 --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestEnergyCalibration
+          COMMAND test_energy_calibration.exe
+                 --log_level=test_suite --report_level=detailed --catch_system_errors=yes  )
 
 
 add_executable( test_spec_file_open.exe test_spec_file_open.cpp )
@@ -46,11 +47,13 @@ FOREACH(child ${children})
   IF(IS_DIRECTORY ${filetestdir})
     #uhg, if we dont get rid of spaces in the file name, it gets interprested as a
     #  seperate command line argument - even if we escape it with quotes
+
+    # HB - this isn't running for me. 
     string(REPLACE " " "%20" filetestdir ${filetestdir} )
     message( ${filetestdir} )
-    add_test( "\"Test open ${child}\""
-                 ${EXECUTABLE_OUTPUT_PATH}/test_spec_file_open.exe 
-                 --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${filetestdir}")
+    add_test( NAME "\"Test open ${child}\""
+              COMMAND test_spec_file_open.exe 
+                 --log_level=test_suite --report_level=detailed --catch_system_errors=yes )
   ENDIF()
 ENDFOREACH()
 
@@ -58,62 +61,62 @@ ENDFOREACH()
 add_executable( test_iso_time_string.exe test_iso_time_string.cpp )
 target_link_libraries( test_iso_time_string.exe PRIVATE SpecUtils Boost::unit_test_framework Boost::date_time)
 set_target_properties( test_iso_time_string.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestIsoTimeString ${EXECUTABLE_OUTPUT_PATH}/test_iso_time_string.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestIsoTimeString COMMAND test_iso_time_string.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes  WORKING_DIRECTORY ${test_data_dir} )
 
 add_executable( test_safe_get_line.exe test_safe_get_line.cpp )
 target_link_libraries( test_safe_get_line.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_safe_get_line.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestSafeGetLine ${EXECUTABLE_OUTPUT_PATH}/test_safe_get_line.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestSafeGetLine COMMAND test_safe_get_line.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir} )
 
 
 add_executable( test_time_from_string.exe test_time_from_string.cpp )
 target_link_libraries( test_time_from_string.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_time_from_string.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( NAME TestTimeFromString COMMAND test_time_from_string.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes WORKING_DIRECTORY ${testdir}/test_data)
+add_test( NAME TestTimeFromString COMMAND test_time_from_string.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir})
 
 
 add_executable( test_string_functions.exe test_string_functions.cpp )
 target_link_libraries( test_string_functions.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_string_functions.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( NAME TestUtilityStringFunctions COMMAND test_string_functions.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes WORKING_DIRECTORY ${testdir}/test_data)
+add_test( NAME TestUtilityStringFunctions COMMAND test_string_functions.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir})
 
 
 add_executable( test_split_to_floats_and_ints.exe test_split_to_floats_and_ints.cpp )
 target_link_libraries( test_split_to_floats_and_ints.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_split_to_floats_and_ints.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( NAME TestSplitToFloats COMMAND test_split_to_floats_and_ints.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes  WORKING_DIRECTORY ${testdir}/test_data)
+add_test( NAME TestSplitToFloats COMMAND test_split_to_floats_and_ints.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir})
 
 
 add_executable( test_utf8_limit_str_size.exe test_utf8_limit_str_size.cpp )
 target_link_libraries( test_utf8_limit_str_size.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_utf8_limit_str_size.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestUtf8LimitStrSize ${EXECUTABLE_OUTPUT_PATH}/test_utf8_limit_str_size.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestUtf8LimitStrSize COMMAND test_utf8_limit_str_size.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir})
 
 
 add_executable( test_utf8_str_len.exe test_utf8_str_len.cpp )
 target_link_libraries( test_utf8_str_len.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_utf8_str_len.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestUtf8StrLen ${EXECUTABLE_OUTPUT_PATH}/test_utf8_str_len.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestUtf8StrLen COMMAND test_utf8_str_len.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes WORKING_DIRECTORY ${test_data_dir} )
 
 add_executable( test_cubic_spline.exe test_cubic_spline.cpp )
 target_link_libraries( test_cubic_spline.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_cubic_spline.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( TestCubicSpline ${EXECUTABLE_OUTPUT_PATH}/test_cubic_spline.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes "-- --indir=${testdir}" )
+add_test( NAME TestCubicSpline COMMAND test_cubic_spline.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes  WORKING_DIRECTORY ${test_data_dir} )
 
 
 add_executable( test_filesystem_functions.exe test_filesystem_functions.cpp )
 target_link_libraries( test_filesystem_functions.exe PRIVATE SpecUtils Boost::unit_test_framework Boost::filesystem )
 set_target_properties( test_filesystem_functions.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( testUtilityFilesystemFunctions ${EXECUTABLE_OUTPUT_PATH}/test_filesystem_functions.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test( NAME testUtilityFilesystemFunctions COMMAND test_filesystem_functions.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes )
 
 add_executable( test_rebin_by_lower_energy.exe test_rebin_by_lower_energy.cpp )
 target_link_libraries( test_rebin_by_lower_energy.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_rebin_by_lower_energy.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test( NAME TestRebinByLowerEnergy COMMAND test_rebin_by_lower_energy.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test( NAME TestRebinByLowerEnergy COMMAND test_rebin_by_lower_energy.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes )
 
 if( SpecUtils_ENABLE_URI_SPECTRA )
 add_executable( test_uri_spectrum.exe test_uri_spectrum.cpp )
 target_link_libraries( test_uri_spectrum.exe PRIVATE SpecUtils Boost::unit_test_framework )
 set_target_properties( test_uri_spectrum.exe PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
-add_test(test_uri_spectrum ${EXECUTABLE_OUTPUT_PATH}/test_uri_spectrum.exe --log_level=test_suite --report_level=detailed --catch_system_error=yes )
+add_test(NAME test_uri_spectrum COMMAND test_uri_spectrum.exe --log_level=test_suite --report_level=detailed --catch_system_errors=yes )
 endif()
